[Fix header] Fixed overflow

--- a/public/css/Standard.scss
+++ b/public/css/Standard.scss
@@ -85,6 +85,10 @@ hr{
   top: 10%;
 }
 
+.nav-link{
+  padding: .25rem 0;
+}
+
 .nav-item {
   color: $primary;
   font-weight: 600;
